<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    tools:context="ru.goodibunakov.itravel.CreateNewTripActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="@color/colorBackgroundCard"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/cardview_default_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/date_from_textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp">

                    <EditText
                        android:id="@+id/date_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_from_hint" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/date_to_textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp">

                    <EditText
                        android:id="@+id/date_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_to_hint" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="@color/colorBackgroundCard"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/cardview_default_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">

                <TextView
                    android:id="@+id/textViewType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_type"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/spinnerType"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/type_list"
                    android:minWidth="@dimen/fourthSampleViewSize" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="@color/colorBackgroundCard"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/cardview_default_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">

                <TextView
                    android:id="@+id/textViewTransport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:text="@string/txt_transport"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewType" />

                <Spinner
                    android:id="@+id/spinnerTransport"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/transport_list"
                    android:minWidth="@dimen/fourthSampleViewSize"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textViewTransport" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="@color/colorBackgroundCard"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/cardview_default_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">

                <TextView
                    android:id="@+id/textViewPersons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_persons"
                    android:textSize="12sp" />

                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                    android:id="@+id/elegant_number_button"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:backGroundColor="@color/colorPrimaryDark"
                    app:finalNumber="@string/number_button_max"
                    app:initialNumber="@string/number_button_min"
                    app:textSize="@dimen/text_body" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="@color/colorBackgroundCard"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/cardview_default_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">

                <TextView
                    android:id="@+id/title_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/title_destination_text" />

                <AutoCompleteTextView
                    android:id="@+id/country"
                    android:layout_width="363dp"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:hint="@string/enter_country"
                    tools:layout_editor_absoluteX="40dp"
                    tools:layout_editor_absoluteY="249dp" />

                <AutoCompleteTextView
                    android:id="@+id/city"
                    android:layout_width="363dp"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:hint="@string/enter_city"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="47dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <Button
            android:id="@+id/btn_create_trip"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_create_trip_selector"
            android:text="@string/btn_create_trip"
            android:textColor="@color/colorWhite"
            android:translationZ="1dp"/>


    </LinearLayout>

</ScrollView>
